WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89924
[Texmap] Bug fix typo about computing bytesPerLine in BitmapTextureGL.
https://bugs.webkit.org/show_bug.cgi?id=89924
Summary
[Texmap] Bug fix typo about computing bytesPerLine in BitmapTextureGL.
Dongseong Hwang
Reported
2012-06-25 17:14:20 PDT
"bytesPerLine == targetRect.width() / 4" is invalid. This patch amended it into "bytesPerLine == targetRect.width() * 4". Moreover, changed magic number 4 to bytesPerPixel.
Attachments
patch
(4.13 KB, patch)
2012-06-25 17:16 PDT
,
Dongseong Hwang
noam
: review+
noam
: commit-queue-
Details
Formatted Diff
Diff
patch v.2
(4.13 KB, patch)
2012-06-25 19:18 PDT
,
Dongseong Hwang
no flags
Details
Formatted Diff
Diff
patch v.3
(4.13 KB, patch)
2012-06-26 01:40 PDT
,
Dongseong Hwang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Dongseong Hwang
Comment 1
2012-06-25 17:16:05 PDT
Created
attachment 149400
[details]
patch
Noam Rosenthal
Comment 2
2012-06-25 18:22:26 PDT
Comment on
attachment 149400
[details]
patch Great! Though ews shows that the patch doesn't apply... do you have other patches up for review that aren't committed yet?
Dongseong Hwang
Comment 3
2012-06-25 19:14:15 PDT
I think this patch blocks on
Bug 89867
, but it is strange, because two changes are completely separated. I will request one time more after
Bug 89867
is accepted. :)
Dongseong Hwang
Comment 4
2012-06-25 19:18:53 PDT
Created
attachment 149428
[details]
patch v.2
Dongseong Hwang
Comment 5
2012-06-26 01:40:29 PDT
Created
attachment 149484
[details]
patch v.3 Try again.
WebKit Review Bot
Comment 6
2012-06-26 06:09:39 PDT
Comment on
attachment 149484
[details]
patch v.3 Clearing flags on attachment: 149484 Committed
r121260
: <
http://trac.webkit.org/changeset/121260
>
WebKit Review Bot
Comment 7
2012-06-26 06:09:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug