[Texmap] Bug fix typo about computing bytesPerLine in BitmapTextureGL. https://bugs.webkit.org/show_bug.cgi?id=89924

"bytesPerLine == targetRect.width() / 4" is invalid.
This patch amended it into "bytesPerLine == targetRect.width() * 4".
Moreover, changed magic number 4 to bytesPerPixel.

Patch by Huang Dongsung <luxtella@company100.net> on 2012-06-26
Reviewed by Noam Rosenthal.

No new tests. Covered by existing tests.

* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::BitmapTextureGL::updateContents):

Canonical link: https://commits.webkit.org/107830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121260 268f45cc-cd09-0410-ab3c-d52691b4dbfc